# Qt-Creator-MCP-Plugin

./: .cursorrules  .gitignore  CMakeLists.txt  CMakeLists_temp.txt  LICENSE  Qt_MCP_Plugin.json  Qt_MCP_Plugin.json.in  Qt_MCP_Plugin_discovery.json.in  README.md  TESTING.md  build.py  build.sh  build_main.py  check_version.py  httpparser.cpp  httpparser.h  httpresponse.cpp  httpresponse.h  launch_qtcreator_with_plugin.bat  launch_qtcreator_with_plugin.sh  mcp.json  mcp.qrc  mcpcommands.cpp  mcpcommands.h  mcpserver.cpp  mcpserver.h  qt_config.py  qt_mcp_plugin.cpp  qt_mcp_pluginconstants.h  test_discovery.py  test_suite.py  version.cmake  version.h  version.h.in
